Run spotless:apply formatter
If you want to rebase follow description in PR

Co-authored-by: teesamuel <olufemititilayosamuel@gmail.com>